--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 TODO.md
-DLMS_bin/
 Private/
+CONTROL
 CONFIG
 FIELD
-DPD_code/CONFIG
-DPD_code/FIELD
-Lib/Fcore/*so
-*/input.yaml
+Lib/Fcore/*.so
 */CONTROL
 */CONFIG
 */FIELD
+*/__pycache__
+*/*.pyc
+*/*.xyz
+*/input.yaml
