Added f90 files and compiler definition

--- a/Lib/Fcore/Makefile
+++ b/Lib/Fcore/Makefile
@@ -1,11 +1,12 @@
 F2PY = f2py
+FVENDOR = gnu95
 
 
-all: f_rdf mat_ops
+all: f_rdf f_rdf2 mat_ops
 
 
 %: %.f90
-	${F2PY} -c $< -m $@
+	${F2PY} -c $< --fcompiler=${FVENDOR} -m $@
 
 
 clean:
